styling for results related page, responsiveness included

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,6 @@
 /* This CSS file contains mostly general elements, and responsive styles of all elements */
 /* Base */
+/* root defines color that are shared by most of the pages */
 :root {
     --primary-color: rgb(65, 105, 225);
     --secondary-color: rgb(108, 117, 125);
@@ -188,6 +189,13 @@ form {
     padding: 15px;
     border-radius: 5px;
     font-weight: bold;
+    animation: flashMessage 5s ease-out;
+    /* make the noti longer */
+    display: block; /* Ensure the alert is shown initially */
+}
+
+.alert-dismiss {
+    display: none;
 }
 
 /* custom styles for different alert types */
@@ -267,6 +275,26 @@ form {
 
 .btn-danger {
     background-color: var(--dark-color);
+}
+
+/* for Flash message keyframes */
+@keyframes flashMessage {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    25% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    75% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
 }
 
 
@@ -505,3 +533,4 @@ form {
 :focus-visible {
     outline: 2px solid var(--primary-color);
     outline-offset: 2px;
+}
