--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -17,7 +17,7 @@
             <h2>Welcome back, {{ username }} !</h2>
         </div>
         <div class="date-display">
-            <p id="current-date"></p>
+            <i class="bi bi-calendar-event me-2 text-white"></i><p id="current-date"></p>
         </div>
     </div>
 <!-- Quick Actions -->
@@ -113,6 +113,5 @@
 <!-- JavaScript for Date and Chart -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
-
 
 {% endblock %}
